--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+h2 {
+    color: #15752b;
+    border-left: 6px solid #0b5c1f;
+    padding-left: 12px;
+}
