--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -1,8 +1,161 @@
-.contact-container {
+div.container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+div.contact-header, div.contact-body, div.contact-footer {
+    margin: 0 250px 0 250px;
+    padding: 0;
+}
+div.breadcum {
+    margin: 30px 0 20px 0;
+}
+div.contact-body {
+    border: 1px solid;
+    padding: 35px;
+    margin-top: 40px;
+}
+div.contact-footer {
+    text-align: center;
+    margin-top: 30px;
+}
+div.breadcum>button {
+    margin-top: -45px;
+}
+button.button {
+    float: right;
+    margin: 2px;
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+    cursor: pointer;
+}
+button.button-edit {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #008CBA;
+}
+button.button-edit:hover {
+    background-color: #008CBA;
+    color: white;
+}
+button.button-view {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #4CAF50;
+}
+button.button-view:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+button.button-delete {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #f44336;
+}
+button.button-delete:hover {
+    background-color: #f44336;
+    color: white;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+li {
+    border: 1px solid #e7e7e7;
+    background-color: #fdfffc;
+    margin: 10px 0 10px 0;
+    padding: 0 0 0 20px;
+    height: 100px;
+}
+li:hover {
+    color: #15752b;
+    background-color: #f3f3f3;
+}
+ul>li>img {
+    border-radius: 50%;
+    height: 55px;
+    margin: 20px 0px -20px 0;
+    transition: transform .2s;
+}
+ul>li>img:hover {
+    transform: scale(1.5);
+}
+ul>li>h3 {
+    width: 25%;
+    margin-left: 70px;
+    margin: -20px 0 15px 75px;
+}
+ul>li>p {
+    width: 25%;
+    text-align: center;
+    margin: -35px 0 -30px 219px;
+}
+ul>li>span{
+    float: right;
+    margin: 0px 20px 0 0;
+}
+
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
+
+@media (max-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+
+@media (max-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .contact-container {
     margin: 10px 450px 10px 450px;
 }
 .button {
-    background-color: #4CAF50; /* Green */
+    background-color: #4CAF50;
     border: none;
     color: white;
     padding: 10px 20px;
@@ -55,4 +208,4 @@ li {
 .float-right {
     float: right;
     margin: -67px 20px 0 0;
-}
+} */
