--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,28 +1,66 @@
-.container {
-    margin: 10px 50px 10px 50px;
+div.header {
+    margin: -8px !important;
+    border: 1px solid #28a745;
+    background-color:#1c9638
 }
+
+.container {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 ul {
     list-style-type: none;
-    margin: 0;
+    margin: 0 250px 0 250px;
     padding: 0;
     overflow: hidden;
-    border: 1px solid #e7e7e7;
-    background-color: #f3f3f3;
 }
 li {
     float: left;
+    font-size: 18px;
 }
 li a {
     display: block;
-    color: #666;
+    color: #d8c5ca;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 li a:hover:not(.active) {
-    background-color: #ddd;
+    color: #fff;
 }
 li a.active {
     color: white;
-    background-color: #4CAF50;
+    /* background-color: #4CAF50; */
+}
+li.folat-right {
+    float: right;
+}
+
+@media (max-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
+
+@media (max-width: 992px) {
+    .container {
+        max-width: 960px;
+    }
+}
+
+
+@media (max-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+
+@media (max-width: 576px) {
+    .container {
+        max-width: 540px;
+    }
 }
