--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,13 @@
 <div class="header">
-  <div class="container">
-      <ul>
-        <li><a routerLink="/contacts">Contact Book</a></li>
-        <!-- <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li ><a href="#about">About</a></li> -->
-      </ul>
-  </div>
+    <div class="container">
+        <ul>
+            <li>
+              <a 
+                routerLink="/contacts"
+                routerLinkActive="active">Contact Book</a></li>
+            <li class="folat-right"><a href="#contact">Register</a></li>
+            <li class="folat-right"><a href="#about">Login</a></li>
+            <li class="folat-right"><a href="#about">Logout</a></li>
+        </ul>
+    </div>
 </div>
